packages/css/src/formElements/combobox/combobox.css
.md-combobox {
  font-family: 'Open sans';
  width: 100%;
}

/* Label */
.md-combobox__label-wrapper {
  margin-bottom: 0.5rem;
}
.md-combobox__label {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}
.md-combobox__label label {
  font-weight: 600;
}

.md-combobox__input-wrapper {
  position: relative;
}
.md-combobox__input {
  width: 100%;
  line-height: 150%;
  border: 1px solid var(--mdPrimaryColor);
  padding: 0.75rem 4rem 0.75rem 2.5rem;
}
.md-combobox--large .md-combobox__input {
  padding: 1rem 4rem 1rem 2.5rem;
}
.md-combobox--small .md-combobox__input {
  padding: 0.5rem 4rem 0.5rem 2.5rem;
}
.md-combobox__input::placeholder {
  color: var(--mdTextColor);
  font-size: 1rem;
}
.md-combobox__input[data-focus-visible],
.md-combobox__input[aria-expanded='true'] {
  outline: 0;
  border-width: 2px;
  padding: calc(0.75rem - 1px) calc(4rem - 1px) calc(0.75rem - 1px) calc(2.5rem - 1px);
}
.md-combobox--large .md-combobox__input[data-focus-visible],
.md-combobox--large .md-combobox__input[aria-expanded='true'] {
  padding: calc(1rem - 1px) calc(4rem - 1px) calc(1rem - 1px) calc(2.5rem - 1px);
}
.md-combobox--small .md-combobox__input[data-focus-visible],
.md-combobox--small .md-combobox__input[aria-expanded='true'] {
  padding: calc(0.5rem - 1px) calc(4rem - 1px) calc(0.5rem - 1px) calc(2.5rem - 1px);
}

.md-combobox__input[data-focus-visible]::placeholder,
.md-combobox__input[aria-expanded='true']::placeholder {
  color: var(--mdGreyColor60);
}
.md-combobox__input:disabled {
  background-color: var(--mdGreyColor20);
  border-color: var(--mdGreyColor60);
}
.md-combobox__input:disabled::placeholder {
  color: var(--mdGreyColor60);
}
.md-combobox__input--before {
  position: absolute;
  top: 50%;
  left: 0.75rem;
  color: var(--mdPrimaryColor);
  width: 1rem;
  height: 1rem;
  transform: translateY(-50%);
}
.md-combobox__input--after {
  position: absolute;
  top: 50%;
  right: 0.75rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  color: var(--mdPrimaryColor);
  transform: translateY(-50%);
  /* pointer-events: none; */
}
.md-combobox__input--after svg {
  width: 1rem;
  height: 1rem;
  rotate: 90deg;
  transition: rotate 0.2s ease-in;
}
.md-combobox__input[aria-expanded='true'] + .md-combobox__input--after svg {
  rotate: -90deg;
  transition: rotate 0.2s ease-in;
}

/* Popover */
.md-combobox__popover {
  background-color: #fff;
  padding-top: 0.25rem;
  border: 2px solid var(--mdPrimaryColor);
  border-top: 0;
}

/* Combobox item */
.md-combobox__checkbox-item {
  padding: 0.75rem;
  cursor: pointer;
}
.md-combobox--large .md-combobox__checkbox-item {
  padding: 1rem 0.75rem;
}
.md-combobox--small .md-combobox__checkbox-item {
  padding: 0.5rem 0.75rem;
}
.md-combobox__checkbox-item[aria-selected='true'] {
  background-color: var(--mdPrimaryColor20);
}
.md-combobox__checkbox-item[data-focus-visible],
.md-combobox__checkbox-item[data-active-item] {
  background-color: var(--mdPrimaryColor40);

  .md-checkbox__label::before {
    background-color: #fff;
  }
}

/* Help text */
.md-combobox__help-text {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.15s ease-out;
}
.md-combobox__help-text--open {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  max-height: 2000px;
  transition: max-height 0.5s ease-in;
}

/* Error */
.md-combobox__error {
  color: var(--mdErrorColor);
  font-size: 0.88em;
}
.md-combobox--has-error .md-combobox__input,
.md-combobox--has-error .md-combobox__popover {
  border-color: var(--mdErrorColor);
}

